# tropic-rs

./: LICENSE-MIT  NOTES.md  Readme.md  SECURITY.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml
.github/workflows/: rust_tests.yml
tropic-cert-store/: Cargo.toml
tropic-cert-store/src/: lib.rs
tropic-cert-store/src/der_decoder/: mod.rs  x509_parser.rs
tropic-cert-store/src/nom_decoder/: mod.rs  nom_parser.rs
tropic-examples/: README.md
tropic-examples/common/: Cargo.toml
tropic-examples/common/src/: lib.rs
tropic-examples/common/src/usb/: consts.rs  rp235x.rs
tropic-examples/firmware/: Cargo.toml
tropic-examples/firmware/.cargo/: config.toml
tropic-examples/firmware/src/: lib.rs
tropic-examples/host/: Cargo.toml
tropic-examples/host/src/: lib.rs
tropic-examples/udev/: 69-probe-rs.rules  99-tropic-example.rules
tropic-rs/: Cargo.toml
tropic-rs/src/: common.rs  crc16.rs  eh0.rs  error.rs  l1.rs  l3.rs  lib.rs  tropic.rs
tropic-rs/src/common/: ecc.rs  mod.rs
tropic-rs/src/common/config/: access_flag.rs  application.rs  application_uap.rs  bootloader.rs  mod.rs
tropic-rs/src/l2/: cert.rs  cert_store.rs  info.rs  mod.rs  x509_parser.rs
tropic-rs/src/l3/: keys.rs  mod.rs  session.rs
tropic-rs/tests/: .gitignore  test_l2_get_info.rs  test_l2_get_log.rs  test_l2_resend.rs  test_l2_rev_startup.rs  test_l2_sleep.rs  test_l2_startup.rs  test_l3_ecc_key_generate.rs  test_l3_ecc_key_store.rs  test_l3_ecdsa_sign.rs  test_l3_eddsa_sign.rs  test_l3_erase_r_config.rs  test_l3_handshake.rs  test_l3_mac_and_destroy.rs  test_l3_mac_and_destroy_api.rs  test_l3_mcounter.rs  test_l3_pairing_key_slots.rs  test_l3_ping.rs  test_l3_r_mem.rs  test_l3_random_value_get.rs  test_l3_read_r_i_config.rs  test_l3_write_i_config.rs  test_l3_write_r_config.rs
tropic-rs/tests/common/: keys.rs  mocks.rs  mod.rs  tcp.rs
tropic-rs/tests/common/tvl_model/: logging_cfg.rs  model_cfg.rs  model_server.rs
tropic-rs/tests/firmware_update_files/boot_v2_0_0/fw_v1.0.0/: fw_cpu.rs  fw_spect.rs
tropic-rs/tests/model_config/: model_cfg.yml  model_logging_cfg.yml
tropic-rs/tests/testing_common/: config.rs  keys.rs  mod.rs
tropic-rs/tests/testing_common/tvl_model/: mod.rs  model_server.rs
