[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-cli = { git = "https://github.com/8de2fdb0/embedded-cli-rs", branch = "feat/public_implementations", default-features = false, features = [
    "macros",
] }

postcard-schema = { version = "0.2", features = ["derive"] }
serde = { version = "1", default-features = false, features = ["derive"] }

usb-device = { version = "0.3", optional = true }


[features]
rp235x = ["usb-device"]
use-std = []
