[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }

postcard-rpc = { version = "0.11", features = ["use-std", "raw-nusb"] }
postcard-schema = { version = "0.2", features = ["derive"] }
postcard = { version = "1.0", features = ["use-std"] }
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros", "time"] }

nusb = { version = "0.2.0", features = ["tokio"] }

clap = { version = "4", features = ["derive"] }

serde = { version = "1", default-features = false, features = ["derive"] }

thiserror = "2"
anyhow = "1"

[[bin]]
name = "tropic_usb_client"
path = "src/bin/tropic_usb_client.rs"
